--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <div class="social-icons">
       <a href="https://www.facebook.com/johnf.huertas.3/"><img src="/icons/facebook.svg" alt="Facebook"></a>
       <a href="https://www.instagram.com/jf_deku/"><img src="/icons/instagram.svg" alt="Instagram"></a>
-      <a href="#"><img src="/icons/tiktok.svg" alt="TikTok"></a>
+      <a href="#"><img src="/icons/Tiktok.svg" alt="TikTok"></a>
     </div>
 
     <!-- Tabs para seleccionar carta -->
@@ -35,3 +35,4 @@
   <script src="/script.js"></script>
 </body>
 </html>
+
