Resuelto conflicto después de pull

--- a/views/index.html
+++ b/views/index.html
@@ -19,8 +19,8 @@
 
     <!-- Tabs para seleccionar carta -->
     <div class="tabs">
-      <div id="tab-bebidas" class="tab active">Carta de Bebidas</div>
-      <div id="tab-menu" class="tab">Carta de Menú</div>
+      <div id="tab-menu" class="tab">Food</div>
+      <div id="tab-bebidas" class="tab active">Drinks</div>
     </div>
 
     <!-- Visor de imágenes -->
