--- a/views/index.html
+++ b/views/index.html
@@ -10,22 +10,19 @@
 
   <div class="container">
 
-    <!-- Iconos de redes sociales -->
     <div class="social-icons">
       <a href="https://www.facebook.com/johnf.huertas.3/"><img src="/icons/facebook.svg" alt="Facebook"></a>
       <a href="https://www.instagram.com/jf_deku/"><img src="/icons/instagram.svg" alt="Instagram"></a>
       <a href="#"><img src="/icons/Tiktok.svg" alt="TikTok"></a>
     </div>
 
-    <!-- Tabs para seleccionar carta -->
     <div class="tabs">
       <div id="tab-menu" class="tab">Food</div>
       <div id="tab-bebidas" class="tab active">Drinks</div>
     </div>
 
-    <!-- Visor de imágenes -->
     <div class="image-container">
-      <img id="menu-image" src="/images/bebidas1.jpg" alt="Carta">
+      <img id="menu-image" src="/images/menu1.jpg" alt="Carta">
       <div id="prev-button" class="nav-button">&#10094;</div>
       <div id="next-button" class="nav-button">&#10095;</div>
     </div>
