--- a/views/index.html
+++ b/views/index.html
@@ -31,5 +31,11 @@
 
   <script src="/script.js"></script>
 </body>
+<div class="footer">
+  <span>dev-JF</span>
+  <a href="https://wa.me/51964996068" target="_blank">
+    <img src="/icons/whatsapp.svg" alt="WhatsApp">
+  </a>
+</div>
 </html>
 
