loader y noticacion de flechas

--- a/views/index.html
+++ b/views/index.html
@@ -8,14 +8,12 @@
 </head>
 <body>
 
+  <!-- Loader -->
+  <div id="loader">
+    <img src="/images/loader.jpg" alt="Cargando...">
+  </div>
+
   <div class="container">
-
-    <div class="social-icons">
-      <a href="https://www.facebook.com/johnf.huertas.3/"><img src="/icons/facebook.svg" alt="Facebook"></a>
-      <a href="https://www.instagram.com/jf_deku/"><img src="/icons/instagram.svg" alt="Instagram"></a>
-      <a href="#"><img src="/icons/Tiktok.svg" alt="TikTok"></a>
-    </div>
-
     <div class="tabs">
       <div id="tab-menu" class="tab">Food</div>
       <div id="tab-bebidas" class="tab active">Drinks</div>
@@ -26,16 +24,26 @@
       <div id="prev-button" class="nav-button">&#10094;</div>
       <div id="next-button" class="nav-button">&#10095;</div>
     </div>
-
   </div>
 
+  <!-- Footer con redes sociales, autor y WhatsApp -->
+  <footer>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/johnf.huertas.3/" target="_blank">
+        <img src="/icons/facebook.svg" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/jf_deku/" target="_blank">
+        <img src="/icons/instagram.svg" alt="Instagram">
+      </a>
+      <a href="#"><img src="/icons/tiktok.svg" alt="TikTok"></a>
+      <span class="marca">dev-JF</span>
+      <a href="https://wa.me/573002020202" target="_blank">
+        <img src="/icons/whatsapp.svg" alt="WhatsApp">
+      </a>
+    </div>
+  </footer>
+
+  <!-- Script al final para que cargue correctamente -->
   <script src="/script.js"></script>
 </body>
-<div class="footer">
-  <span>dev-JF</span>
-  <a href="https://wa.me/51964996068" target="_blank">
-    <img src="/icons/whatsapp.svg" alt="WhatsApp">
-  </a>
-</div>
 </html>
-
