--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,7 @@
 
     <div class="image-container">
       <img id="menu-image" src="/images/menu1.jpg" alt="Carta">
+      <div id="notice"></div>
       <div id="prev-button" class="nav-button">&#10094;</div>
       <div id="next-button" class="nav-button">&#10095;</div>
     </div>
