--- a/views/index.html
+++ b/views/index.html
@@ -30,13 +30,13 @@
   <!-- Footer con redes sociales, autor y WhatsApp -->
   <footer>
     <div class="social-icons">
-      <a href="https://www.facebook.com/johnf.huertas.3/" target="_blank">
+      <a href="https://www.facebook.com/share/15NMpWSS1U/" target="_blank">
         <img src="/icons/facebook.svg" alt="Facebook">
       </a>
-      <a href="https://www.instagram.com/jf_deku/" target="_blank">
+      <a href="https://www.instagram.com/wasquibarra?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
         <img src="/icons/instagram.svg" alt="Instagram">
       </a>
-      <a href="#"><img src="/icons/tiktok.svg" alt="TikTok"></a>
+      <a href="https://wa.me/51984501971"><img src="/icons/whatsapp1.svg" alt="TikTok"></a>
       <span class="marca">dev-JF</span>
       <a href="https://wa.me/51964996068" target="_blank">
         <img src="/icons/whatsapp.svg" alt="WhatsApp">
